tests/unit/compile/cases/syntax-errors/01.text-lt.t
foo < bar
---- THROW% ----
Unexpected <ws " ">; expected: <SLASH>, <HtmlNameWord> near ` bar` in `%s` at line 1
